--- a/config.json
+++ b/config.json
@@ -1,6 +1,11 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
+    "title":"ME6919 Blog",
+    "subTitle":"这里是ME6919的博客",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+    "GMEEK_VERSION":"last",
+    "bottomText":"转载请注明出处",
+    "homeUrl":"http://secondblog.me6919.xx.kg",
+    "singlePage":["about"],
+    "startSite":"08/01/2025",
+    "onePageListNum":10
 }
