--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"ME6919 Blog",
     "subTitle":"这里是ME6919的博客",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/212540042?s=96&v=2",
     "GMEEK_VERSION":"last",
     "bottomText":"转载请注明出处",
     "homeUrl":"http://secondblog.me6919.xx.kg",
