--- a/config.json
+++ b/config.json
@@ -5,7 +5,9 @@
     "GMEEK_VERSION":"last",
     "bottomText":"转载请注明出处",
     "homeUrl":"http://secondblog.me6919.xx.kg",
-    "singlePage":["about"],
-    "startSite":"08/01/2025",
-    "onePageListNum":10
+    "singlePage":["link","about"],
+    "startSite":"02/05/2025",
+    "onePageListNum":15,
+    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekBSZ.js'></script>",
+    "i18n":"CN"
 }
